@@ -1,3 +1,7 @@
+2021-02-01  Omar Polo  <op@omarpolo.com>
+
+	* parse.y (servopt): require absolute paths in config file
+
 2021-01-31  Omar Polo  <op@omarpolo.com>
 
 	* gmid.c (main): cgi scripts now have only std{in,out,err} open
